--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,401 @@
-.App {
+*body {
+  font-family: Arial, sans-serif;
+  color: #333;
+  margin: 0;
+}
+a{
+  text-decoration: none;
+  color: black;
+}
+
+/* styles for header */
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #f0f0f0;
+  padding: 10px;
+}
+
+header img {
+  max-width: 160px;
+  /* height: 60px; */
+  height: auto;
+}
+
+/* styles for sidebar */
+
+.sidebar {
+  padding-top: 3px;
+  background-color: #0070ac;
+  height: 100vh;
+  width: 188px;
+}
+
+.sidebar-link {
+  display: flex;
+  margin: 10px 0;
+  text-decoration: none;
+  color: #fff;
+  transition: background-color 0.3s, padding 0.3s;
+  align-items: center;
+  padding: 20px;
+}
+
+.sidebar-link-wrapper {
+  display: block;
+  margin: 40px 0;
+}
+
+.sidebar-link:hover {
+  background-color: #f06d4b;
+  padding: 20px;
+  color: black;
+}
+
+.sidebar-link.active {
+  background-color: #f06d4b;
+  padding: 20px;
+  color: black;
+}
+
+.sidebar-link svg {
+  margin-right: 8px;
+}
+
+.image {
+  background-image: url(https://www.ensarsolutions.com/_next/static/media/home-banner.ddb42905.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
+
+.layout {
+  display: flex;
+}
+
+/* styles for Home */
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 45px;
+}
+
+.card {
+  width: 45%;
+  margin-bottom: 20px;
+}
+
+.card-header h3 {
+  background-color: #d8cfcf;
+  padding: 20px;
+  border-radius: 5px 5px 0 0;
+}
+
+.card-content {
+  padding-top: 20px;
+}
+
+.card-content p {
+  margin: 0;
+}
+
+.card-footer {
+  text-align: center;
+  padding: 8px;
+}
+
+.card-button {
+  background-color: #f06d4b;
+  color: #f1f1f1f1;
+  border: none;
+  padding: 8px 30px;
+  border-radius: 4px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.card {
+  border: 3px solid #ccc;
+  width: 500px;
+  border-radius: 10px;
+  margin-left: 100px;
+}
+
+.main {
+  display: flex;
+  padding: 0px 40px;
+  justify-content: space-evenly;
+  margin-top: 45px;
+}
+
+.tables {
+  margin-left: 40px;
+  margin-top: 40px;
+}
+
+/* styles for table */
+
+.tables h2 {
+  margin-top: 20px;
+}
+
+.table-container,h2{
+padding: 0 40px;
+}
+
+table {
+  margin-top: 40px;
+}
+
+/* table {
+
+  border-collapse: collapse;
+  width: 1140px;
+  margin-top: 60px;
+  margin-right: auto;
+}
+.table{
+  margin-left: 40px;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+th {
+
+  background-color: #f2f2f2;
+} */
+
+
+/* styles for about */
+.para {
+  text-align: left;
+  border-radius: 5px;
+  height: 200px;
+  padding: 20px 0 0 20px;
+  margin-top: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.about-section {
+  text-align: left;
+  margin-top: 70px;
+  margin-left: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.more-info-button {
+  background-color: #f06d4b;
+  display: block;
+  margin: 0 auto;
   color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* styles for popup */
+
+.popup-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  align-items: center;
+}
+
+.popup-content {
+  background-color: #fff;
+  width: 60%;
+  max-width: 500px;
+  margin: 50px auto;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.popup-content p {
+  padding-top: 10px;
+}
+
+.close-popup {
+  background-color: #ccc;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-left: 205px;
+}
+
+/* styles for addemployee */
+
+.employee-container {
+  max-width: 400px;
+  padding: 20px;
+  margin-left: 350px;
+}
+
+.form-wrap {
+  padding: 15px 25px;
+  color: #333;
+  width: 500px;
+}
+
+.form-wrap h1,
+.form-wrap p {
+  text-align: center;
+}
+
+.form-wrap .form-group {
+  margin-top: 15px;
+}
+
+.form-wrap .form-group label {
+  display: block;
+  color: #666;
+}
+
+.form-wrap .form-group input {
+  width: 200px;
+  padding: 10px;
+}
+
+.form-wrap button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  /* background: #f06d4b; */
+  color: #fff;
+  cursor: pointer;
+}
+
+.form-wrap button:hover {
+  background: #004c75;
+}
+
+.form-wrap .bottom-text {
+  font-size: 13px;
+  margin-top: 20px;
+}
+
+.form-row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+.form-row .form-group {
+  flex-basis: 100%;
+}
+
+/* validation  msg*/
+.error-msg {
+  color: red;
+}
+
+
+/* header with RWD */
+
+@media (max-width: 768px) {
+  header img {
+    max-width: 120px; 
   }
 }
+
+/* sidebar with RWD */
+
+@media (max-width: 768px) {
+  .sidebar {
+      width: 180px; 
+  }
+
+  /* .nav-links {
+      padding: 20px 10px; 
+  } */
+
+  .sidebar-link {
+      text-align: center;
+  }
+}
+
+/*  home with RWD */
+
+@media (max-width: 768px) {
+  .content {
+    flex-direction: column;
+    align-items: center; 
+  }
+
+  .card {
+    width: 90%; 
+    margin-left: 0; 
+  }
+
+  .tables {
+    margin-left: 20px; 
+  }
+
+  table {
+    width: 100%; 
+    margin-left: 0; 
+    margin-right: 0; 
+  }
+}
+
+/* styles for about with RWD */
+
+@media (max-width: 768px) {
+  .about-section {
+    margin-left: 0; 
+  }
+
+  .more-info-button {
+    margin-left: 50%; 
+    transform: translateX(-50%); 
+  }
+
+  .close-popup {
+    margin-left: 50%;
+    transform: translateX(-50%); 
+  }
+}
+
+/* styles for addemployee with RWD */
+
+@media (max-width: 768px) {
+  .employee-container {
+    max-width: 100%; 
+    margin-left: 0; 
+    padding: 10px;
+  }
+
+  .form-wrap {
+    width: 100%; 
+  }
+
+  .form-row .form-group {
+    flex-basis: 100%; 
+  }
+}
+
